mengubah isi konten pada spesialized dan project unggulan

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                 <div class="hero-left">
                     <h3 class="pre-tittle">My Name is</h3>
                     <h1 class="hero-name">Anggi <span>Fauzan</span></h1>
-                    <p>Creative front-end with more than +5 years of experiance
-                        in enterprise companies and startups. Proficient in javascript and
-                        React. Passionate about UI/UX.
+                    <p>I am a graduate of Informatics Engineering. I am very enthusiastic about technology. I am also
+                        active in organizations. This experience makes me able to work effectively in a team. I am eager
+                        to learn and contribute, and I have a special interest in data analysis, mobile development, and
+                        UI/UX.
                     </p>
 
                 </div>
@@ -75,7 +76,7 @@
                     </div>
                     <h4>UI/UX Design</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor.
+                        Design a user-friendly interface that is both beautiful and effective.
                     </p>
                 </div>
 
@@ -90,7 +91,7 @@
                     </div>
                     <h4>Data Visualization</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor.
+                        Turning data into clear and compelling visuals that tell a story.
                     </p>
                 </div>
 
@@ -105,7 +106,7 @@
                     </div>
                     <h4>Mobile App Development</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor.
+                        Build high-quality mobile apps that meet your specific needs.
                     </p>
                 </div>
             </div>
@@ -123,13 +124,13 @@
                 <!-- Portfolio 1 -->
                 <div class="portfolio">
                     <div class="portfolio-cover">
-                        <img src="./images/portfolio_web/ui.jpg" alt="Portfolio 1">
+                        <img src="./images/portfolio_web/echopilahpp.png" alt="Portfolio 1">
                     </div>
 
                     <div class="portfolio-info">
                         <div class="portfolio-tittle">
-                            <h4>Agency Website</h4>
-                            <a href="/" class="portfolio-link">
+                            <h4>EchoPilah</h4>
+                            <a href="https://github.com/CH2-PR636" class="portfolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
@@ -138,13 +139,15 @@
                         </div>
 
                         <div class="portfolio-tags">
-                            <div>React</div>
-                            <div>Tailwind</div>
+                            <div>Kotlin</div>
+                            <div>Google Cloud</div>
+                            <div>ML</div>
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, magni nisi culpa ad itaque
-                            at autem numquam fugiat inventore ex quia quam deserunt voluptatibus distinctio aliquam
-                            temporibus. Quisquam, sit quibusdam!</p>
+                        <p>Ecopilah is a waste sorting application that uses a machine learning model so that it can
+                            separate / sort organic and non-organic waste, in addition to sorting waste EcoPilah also
+                            provides organic and non-organic waste education by providing differences between the two
+                            and providing recommendations for recycling non-organic waste into useful items.</p>
                     </div>
                 </div>
 
@@ -157,8 +160,9 @@
 
                     <div class="portfolio-info">
                         <div class="portfolio-tittle">
-                            <h4>Data Visualization</h4>
-                            <a href="/" class="portfolio-link">
+                            <h4>Sentiment Analysis of Emission Test</h4>
+                            <a href="https://github.com/kutucoding/Analisis-Sentimen-UjiEmisi.git"
+                                class="portfolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
@@ -168,12 +172,16 @@
 
                         <div class="portfolio-tags">
                             <div>Excel</div>
-                            <div>Tableu</div>
+                            <div>Python</div>
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, magni nisi culpa ad itaque
-                            at autem numquam fugiat inventore ex quia quam deserunt voluptatibus distinctio aliquam
-                            temporibus. Quisquam, sit quibusdam!</p>
+                        <p>This project aims to analyze public sentiment towards emission testing policies in Indonesia.
+                            By examining social media posts, news articles, and online forums, the project will
+                            determine whether the public generally supports or opposes these policies. The analysis will
+                            use sentiment analysis techniques to categorize public opinions as positive, negative, or
+                            neutral, and identify key themes and factors influencing these sentiments. The findings will
+                            provide insights into public perception and offer recommendations for policy improvements
+                            and communication strategies.</p>
                     </div>
                 </div>
 
@@ -186,8 +194,8 @@
 
                     <div class="portfolio-info">
                         <div class="portfolio-tittle">
-                            <h4>Pengolahan Sampah</h4>
-                            <a href="/" class="portfolio-link">
+                            <h4>Waste Management</h4>
+                            <a href="https://github.com/kutucoding/aplikasi-submission.git" class="portfolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
@@ -200,9 +208,11 @@
                             <div>Flutter</div>
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, magni nisi culpa ad itaque
-                            at autem numquam fugiat inventore ex quia quam deserunt voluptatibus distinctio aliquam
-                            temporibus. Quisquam, sit quibusdam!</p>
+                        <p>This mobile app, titled "Pengolahan Sampah" (Waste Management), focuses on waste reduction
+                            and management. It features categorized waste types such as leftover food, wood/twigs,
+                            paper/cardboard, and plastic. The app also provides educational resources on waste
+                            processing and promotes a "Zero Waste" lifestyle. It aims to encourage users to save the
+                            planet through responsible waste handling.</p>
                     </div>
                 </div>
 
@@ -236,43 +246,37 @@
                             <div></div>
                         </div>
                         <div class="education-info">
-                            <h4 class="education-tittle">Darussalam Gontor University</h4>
-                            <p>Bachelor Degree - Informatics Engineering</p>
-                            <h4 class="education-years">2020 - 2024</h4>
-                        </div>
-                    </div>
-                    <!-- Education 3 -->
-                    <div class="education">
-                        <div class="line">
-                            <div></div>
-                        </div>
-                        <div class="education-info">
-                            <h4 class="education-tittle">Darussalam Gontor University</h4>
-                            <p>Bachelor Degree - Informatics Engineering</p>
-                            <h4 class="education-years">2020 - 2024</h4>
+                            <h4 class="education-tittle">Pondok Modern Darussalam Gontor</h4>
+                            <p>Santri</p>
+                            <h4 class="education-years">2014 - 2020</h4>
                         </div>
                     </div>
                 </div>
                 <div class="skills-right">
-                    <p>Creative front-end with more than +5 years of experiance
-                        in enterprise companies and startups. Proficient in javascript and
-                        React. Passionate about UI/UX.</p>
+                    <p>I am a graduate of Informatics Engineering. I am very enthusiastic about technology. I am also
+                        active in organizations. This experience makes me able to work effectively in a team. I am eager
+                        to learn and contribute, and I have a special interest in data analysis, mobile development, and
+                        UI/UX.
+                    </p>
 
                     <div class="skills-list">
                         <ul>
-                            <li>React JS</li>
-                            <li>Node JS</li>
-                            <li>MongoDB</li>
-                            <li>HTML</li>
-                            <li>Vue JS</li>
+                            <li>Word</li>
+                            <li>Excel</li>
+                            <li>Tableau</li>
+                            <li>Kotlin</li>
+                            <li>Flutter</li>
+                            <li>Laravel</li>
+                            <li>Laragon</li>
+                            <li>TablePlus</li>
                         </ul>
 
                         <ul>
-                            <li>React JS</li>
-                            <li>Node JS</li>
-                            <li>MongoDB</li>
-                            <li>HTML</li>
-                            <li>Vue JS</li>
+                            <li>Time Management</li>
+                            <li>Leadership</li>
+                            <li>TeamWork</li>
+                            <li>Flexibility</li>
+                            <li>Responsibility</li>
                         </ul>
                     </div>
                 </div>
@@ -347,19 +351,19 @@
     <!-- Footer -->
     <footer>
         <div class="footer-icons">
-            <a href="">
+            <a href="https://www.instagram.com/zanojan20/?hl=en">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path
                         d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
                 </svg>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/anggi-fauzan/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path
                         d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
                 </svg>
             </a>
-            <a href="">
+            <a href="https://github.com/kutucoding">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path
                         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
