--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                         </svg>
                     </div>
                     <div class="contact-item-detail">
-                        <h4>Mail</h4>
+                        <h4>Email</h4>
                         <p>anggifauzan2020@gmail.com</p>
                     </div>
                 </div>
