--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#portfolios">Portofolio</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="/resume.pdf" target="_blank">
+                        <li><a href="/resume_baru.pdf" target="_blank">
                                 <button class="btn">Resume</button>
                             </a></li>
                     </ul>
