[mr.anggi] mengatur list pada description restaurant app, mengganti gambarnya, mengganti link github nya

--- a/index.html
+++ b/index.html
@@ -155,14 +155,13 @@
 
                 <div class="portfolio">
                     <div class="portfolio-cover">
-                        <img src="./images/portfolio_web/data.jpg" alt="Portfolio 1">
+                        <img src="./images/portfolio_web/restaurant_app.png" alt="Portfolio 1">
                     </div>
 
                     <div class="portfolio-info">
                         <div class="portfolio-tittle">
-                            <h4>Sentiment Analysis of Emission Test</h4>
-                            <a href="https://github.com/kutucoding/Analisis-Sentimen-UjiEmisi.git"
-                                class="portfolio-link">
+                            <h4>Restaurant App - Submission IDCamp 2025</h4>
+                            <a href="https://github.com/kutucoding/submission_restaurant_app" class="portfolio-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path
                                         d="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" />
@@ -171,17 +170,25 @@
                         </div>
 
                         <div class="portfolio-tags">
-                            <div>Excel</div>
-                            <div>Python</div>
+                            <div>Flutter</div>
+
                         </div>
 
-                        <p>This project aims to analyze public sentiment towards emission testing policies in Indonesia.
-                            By examining social media posts, news articles, and online forums, the project will
-                            determine whether the public generally supports or opposes these policies. The analysis will
-                            use sentiment analysis techniques to categorize public opinions as positive, negative, or
-                            neutral, and identify key themes and factors influencing these sentiments. The findings will
-                            provide insights into public perception and offer recommendations for policy improvements
-                            and communication strategies.</p>
+                        <p>Restaurant App is an IDCamp 2025 submission project from the Flutter Fundamentals class. This
+                            app is designed to implement the knowledge learnt during the programme. The main features
+                            available in this app include:
+
+                            <li>Restaurant API: Access real-time restaurant data through the API.</li>
+                            <li>Notification: Provides important notifications, such as promos or restaurant
+                                recommendations.</li>
+                            <li> Local Storage: Stores user data locally for offline access.</li>
+
+                            <li>Theme Mode: Supports light and dark modes for user convenience.</li>
+                            
+                            <li>Provider: Efficiently manage the application state using Provider.</li>
+                            
+                            <li>Restaurant API: Access real-time restaurant data through the API.</li>
+                        </p>
                     </div>
                 </div>
 
