--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- untuk di render dengan cara terbaik di browser internet explorer -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- untuk membuat website responsive -->
-    <title>Anggi Fauzan - Sofware Engineer</title>
+    <title>Anggi Fauzan - Flutter Dev</title>
     <link rel="stylesheet" href="./styles/style.css"> <!-- untuk menghubungkan file css -->
     <link rel="stylesheet" href="./styles/responsive.css"> <!-- untuk menambahkan icon pada tab browser -->
 </head>
@@ -26,7 +26,7 @@
                         <li><a href="#portfolios">Portofolio</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="/resume_baru.pdf" target="_blank">
+                        <li><a href="/CV_Mobile_Developer.pdf" target="_blank">
                                 <button class="btn">Resume</button>
                             </a></li>
                     </ul>
