[mas anggi] memperbarui skill

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         </div>
                         <div class="education-info">
                             <h4 class="education-tittle">Pondok Modern Darussalam Gontor</h4>
-                            <p>Santri</p>
+                            <p>Islamic Teacher Traning College</p>
                             <h4 class="education-years">2014 - 2020</h4>
                         </div>
                     </div>
@@ -273,6 +273,9 @@
                             <li>Tableau</li>
                             <li>Kotlin</li>
                             <li>Flutter</li>
+                            <li>Firebase</li>
+                            <li>Git Version Control</li>
+                            <li>RESTful APIs</li>
                         </ul>
 
                         <ul>
@@ -281,6 +284,9 @@
                             <li>TeamWork</li>
                             <li>Flexibility</li>
                             <li>Responsibility</li>
+                            <li>Problem Solving</li>
+                            <li>Communication</li>
+                            <li>Team Collaboration</li>
                         </ul>
                     </div>
                 </div>
